Dodana klasa PolarityBasic

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@
 
 # IntelliJ
 /out/
-
+/libs/
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
@@ -44,3 +44,4 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+
